Wed May 26 11:16:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* errno.cc (errmap): Map ERROR_BAD_NET_NAME to errno ENOSHARE.

Fri May 26 02:23:35 2000  Christopher Faylor <cgf@cygnus.com>

	* sigproc.h (sigframe::set): Accept a default frame pointer.
	* sigproc.cc (sig_send): Use passed in frame pointer, if appropriate.

Thu May 25 17:44:25 2000  Christopher Faylor <cgf@cygnus.com>

	* dir.cc (rmdir): Use file attributes that have already been discovered
	by path_conv.

2000-05-25  Kazuhiro Fujieda <fujieda@jaist.ac.jp>

	* dir.cc (rmdir): Correct the manner in checking the target directory.

Wed May 24 21:59:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* dir.cc (writable_directory): Comment out previous code,
	return always 1 for now.
	(mkdir): Call set_file_attribute explicitely with S_IFDIR mode bit.
	* syscalls.cc (chown_worker): Ditto.
	(chmod): Ditto.
	* security.cc (get_nt_attribute): Fix error in debug output.
	Never set FILE_DELETE_CHILD for files.
	Construct appropriate inherit attribute according to file type.
	
2000-05-23  DJ Delorie  <dj@cygnus.com>

	* syscalls.cc (_cygwin_istext_for_stdio): New, for newlib
	* include/cygwin/version.h: Bump API number for detect old
	programs using old getc/putc macros
	
2000-05-23  DJ Delorie  <dj@cygnus.com>

	* dir.cc (writable_directory): handle root directories

Tue May 23 10:09:26 2000  Christopher Faylor <cgf@cygnus.com>

	* uname.cc (uname): Use a "s" to denote a snapshot to avoid confusion
	with the number "5".

Tue May 23 10:01:07 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (mount_info::conv_to_posix_path): Avoid putting a trailing
	slash on a directory name when the ms-dos path spec is a root directory
	of a device.
	* registry.cc (reg_key::build_reg): Set 'key_is_invalid' flag rather
	than using an INVALID_HANDLE_KEY.
	(reg_key::get_int): Test for key validity before performing registry
	operations.
	(reg_key::set_int): Ditto.
	(reg_key::get_string): Ditto.